# django-menu-tag

./: README.md  mypy.ini  pyproject.toml
menu_app/: asgi.py  settings.py  urls.py  wsgi.py
mymenu/: admin.py  models.py  tests.py  urls.py  views.py
mymenu/management/commands/: createmenu.py
mymenu/migrations/: 0001_initial.py
mymenu/templates/: index.html  named_url.html
mymenu/templates/tags/: menu.html
mymenu/templatetags/: draw_menu.py
